--- a/scripts/deb/control
+++ b/scripts/deb/control
@@ -6,7 +6,7 @@ Standards-Version: 0.1
 Build-Depends: debhelper (>= 9)
 
 Package: liblonghorn
-Architecture: amd64
+Architecture: any
 Depends: ${misc:Depends}
 Description: Longhorn development library
  Use to communicate with Longhorn controller.
